# Portfolio-Optimization

./: .gitignore  README.md  pyproject.toml
app/: models.py  settings.py
app/agents/: geminiClient.py  optimizer.py  staticOptimizer.py
app/mcp/client/: mcpExecutor.md  mcpExecutor.py
app/mcp/server/: polygon.py
app/prompts/: mcpExecutor_getArguments.txt  optimizer_startDate.txt
readingNotes/: marokowitz_mean_variance.md  quantum_optimization.md  second_order_cone_program.md
