[project]
name = "portfoliooptimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.33.0",
    "langgraph>=0.6.7",
    "mcp>=1.13.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
