[project]
name = "portfoliooptimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.33.0",
    "grandalf>=0.8",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.8",
    "mcp>=1.13.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "polygon-api-client>=1.15.4",
    "pydantic>=2.11.7",
    "pyportfolioopt>=1.5.6",
    "uvicorn>=0.35.0",
    "yfinance>=1.0",
]
